# kdguard

./: Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci-dev.yml  ci.yml  release.yml
languages/: de.json  en.json
src/: config.rs  errors.rs  generator.rs  health_check.rs  lib.rs  logging.rs  main.rs  uninstall.rs  update.rs
src/password/: generator.rs  health_check.rs  mod.rs
src/tui/: app.rs  mod.rs  ui.rs
src/tui/screens/: check_screen.rs  generator_screen.rs  help_screen.rs  main_screen.rs  mod.rs  settings_screen.rs
