[package]
name = "kdguard"
version = "0.5.4"
edition = "2024"
description = "A CLI tool to generate secure and random passwords"
authors = ["KarnesTH <p_haehnel@hotmail.de>"]
license = "MIT"
repository = "https://github.com/KarnesTH/kdguard"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
inquire = "0.9.1"
lazy_static = "1.5.0"
lingua-i18n-rs = "0.3.0"
reqwest = { version = "0.12.26", features = ["json"] }
ring = "0.17.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"

[profile.release]
opt-level = "z"
lto = true
strip = true
